Remplacement de ul par form, création de login.js

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/login.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/login.html
@@ -30,19 +30,24 @@
       <div class="containerLogin">
         <div class="cardLogin">
           <h2>Log In</h2>
-          <ul>
-            <li>E-mail<br /><input type="text" id="email" name="email" /></li>
-            <li>Mot de passe<br /><input type="text" id="mdp" name="mdp" /></li>
+          <form method="get">
+            <label for="email">E-mail</label>
+            <input type="text" id="email" name="email" required />
+            <label for="mdp">Mot de passe</label>
+            <input type="password" id="mdp" name="mdp" required />
             <div class="btn">
               <button class="seConnecter" type="submit">Se connecter</button
               ><br />
+            </form>
+          </div>
+          <div class="containerMdpOublie">
               <button class="mdpOublie" type="submit">
                 Mot de passe oublié
               </button>
             </div>
-          </ul>
         </div>
       </div>
     </main>
+    <script src="../Backend/fonctions/login.js"></script>
   </body>
 </html>
