--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -51,6 +51,12 @@
       </section>
       <section id="portfolio">
         <h2>Mes Projets</h2>
+        <div class="filtre">
+          <button class="btn tous">Tous</button>
+          <button class="btn objets">Objets</button>
+          <button class="btn Appartements">Appartements</button>
+          <button class="btn hotelsRestaurants">Hôtels & restaurants</button>
+        </div>
         <div class="gallery">
           <figure>
             <img src="assets/images/abajour-tahina.png" alt="Abajour Tahina" />
