--- a/Portfolio-architecte-sophie-bluel/FrontEnd/login.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/login.html
@@ -35,7 +35,7 @@
             <input type="text" id="email" name="email" required />
             <label for="mdp">Mot de passe</label>
             <input type="password" id="mdp" name="mdp" required />
-            <div class="btn">
+            <div class="btnLogin">
               <button class="seConnecter" type="submit">Se connecter</button
               ><br />
             </form>
