Ajout du reste des fonctions de tri, Tous, Appartements, Hotels & restaurants

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -54,7 +54,7 @@
         <div class="filtre">
           <button class="btn tous">Tous</button>
           <button class="btn objets">Objets</button>
-          <button class="btn Appartements">Appartements</button>
+          <button class="btn appartements">Appartements</button>
           <button class="btn hotelsRestaurants">Hôtels & restaurants</button>
         </div>
         <div class="gallery"></div>
