Repositionement de mon dossier fonctions

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -81,6 +81,6 @@
         </ul>
       </nav>
     </footer>
-    <script src="../Backend/fonctions/filtres.js"></script>
+    <script src="fonctions/filtres.js"></script>
   </body>
 </html>
