--- a/Portfolio-architecte-sophie-bluel/FrontEnd/login.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/login.html
@@ -48,6 +48,6 @@
         </div>
       </div>
     </main>
-    <script src="../Backend/fonctions/login.js"></script>
+    <script src="fonctions/login.js"></script>
   </body>
 </html>
