Ajout de la modale pour modifier le contenu de la page index.html

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -12,6 +12,7 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/modale.css" />
   </head>
   <body>
     <header>
@@ -51,6 +52,108 @@
       </section>
       <section id="portfolio">
         <h2>Mes Projets</h2>
+        <a href="#modale" class="js-modale">Modifier</a>
+        <asside
+          id="modale"
+          class="modale"
+          aria-hidden="true"
+          role="dialog"
+          aria-modal="false"
+          aria-labelledby="titleModale"
+          style="display: none"
+        >
+          <div class="modale-wrapper">
+            <button class="js-modal-close">Fermer</button>
+            <h4 id="titleModale">Galerie photo</h4>
+            <div class="modaleGallery">
+              <figure>
+                <img
+                  src="assets/images/abajour-tahina.png"
+                  alt="Abajour Tahina"
+                />
+                <figcaption>Abajour Tahina</figcaption>
+              </figure>
+              <figure>
+                <img
+                  src="assets/images/appartement-paris-v.png"
+                  alt="Appartement Paris V"
+                />
+                <figcaption>Appartement Paris V</figcaption>
+              </figure>
+              <figure>
+                <img
+                  src="assets/images/restaurant-sushisen-londres.png"
+                  alt="Restaurant Sushisen - Londres"
+                />
+                <figcaption>Restaurant Sushisen - Londres</figcaption>
+              </figure>
+              <figure>
+                <img
+                  src="assets/images/la-balisiere.png"
+                  alt="Villa “La Balisiere” - Port Louis"
+                />
+                <figcaption>Villa “La Balisiere” - Port Louis</figcaption>
+              </figure>
+              <figure>
+                <img
+                  src="assets/images/structures-thermopolis.png"
+                  alt="Structures Thermopolis"
+                />
+                <figcaption>Structures Thermopolis</figcaption>
+              </figure>
+              <figure>
+                <img
+                  src="assets/images/appartement-paris-x.png"
+                  alt="Appartement Paris X"
+                />
+                <figcaption>Appartement Paris X</figcaption>
+              </figure>
+              <figure>
+                <img
+                  src="assets/images/le-coteau-cassis.png"
+                  alt="Pavillon “Le coteau” - Cassis"
+                />
+                <figcaption>Pavillon “Le coteau” - Cassis</figcaption>
+              </figure>
+              <figure>
+                <img
+                  src="assets/images/villa-ferneze.png"
+                  alt="Villa Ferneze - Isola d’Elba"
+                />
+                <figcaption>Villa Ferneze - Isola d’Elba</figcaption>
+              </figure>
+              <figure>
+                <img
+                  src="assets/images/appartement-paris-xviii.png"
+                  alt="Appartement Paris XVIII"
+                />
+                <figcaption>Appartement Paris XVIII</figcaption>
+              </figure>
+              <figure>
+                <img
+                  src="assets/images/bar-lullaby-paris.png"
+                  alt="Bar “Lullaby” - Paris"
+                />
+                <figcaption>Bar “Lullaby” - Paris</figcaption>
+              </figure>
+              <figure>
+                <img
+                  src="assets/images/hotel-first-arte-new-delhi.png"
+                  alt="Hotel First Arte - New Delhi"
+                />
+                <figcaption>Hotel First Arte - New Delhi</figcaption>
+              </figure>
+            </div>
+            <form method="post" enctype="multipart/form-data">
+              <button class="ajouterUnePhoto" type="button">
+                Ajouter une photo
+              </button>
+              <button class="supprimerGalerie" type="button">
+                Supprimer Galerie
+              </button>
+            </form>
+          </div>
+        </asside>
         <div class="filtre">
           <button class="btn tous">Tous</button>
           <button class="btn objets">Objets</button>
@@ -135,7 +238,7 @@
         </div>
       </section>
       <section id="contact">
-        <h2>Contact</h2>
+        <h3>Contact</h3>
         <p>Vous avez un projet ? Discutons-en !</p>
         <form action="#" method="post">
           <label for="name">Nom</label>
@@ -157,5 +260,6 @@
       </nav>
     </footer>
     <script src="fonctions/filtres.js"></script>
+    <script src="fonctions/modale.js"></script>
   </body>
 </html>
