Ajout du stopPropagation

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -62,7 +62,7 @@
           aria-labelledby="titleModale"
           style="display: none"
         >
-          <div class="modale-wrapper">
+          <div class="modale-wrapper js-modal-stop">
             <button class="js-modal-close">Fermer</button>
             <h4 id="titleModale">Galerie photo</h4>
             <div class="modaleGallery">
