--- a/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>Sophie Bluel - Architecte d'intérieur</title>
@@ -15,51 +15,17 @@
     <link rel="stylesheet" href="./assets/modale.css" />
   </head>
   <body>
-    <header>
-      <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
-      <nav>
-        <ul>
-          <li><a href="#portfolio">projets</a></li>
-          <li><a href="#contact">contact</a></li>
-          <li><a href="login.html">login</a></li>
-          <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section id="introduction">
-        <figure>
-          <img src="./assets/images/sophie-bluel.png" alt="" />
-        </figure>
-        <article>
-          <h2>Designer d'espace</h2>
-          <p>
-            Je raconte votre histoire, je valorise vos idées. Je vous accompagne
-            de la conception à la livraison finale du chantier.
-          </p>
-          <p>
-            Chaque projet sera étudié en commun, de façon à mettre en valeur les
-            volumes, les matières et les couleurs dans le respect de l’esprit
-            des lieux et le choix adapté des matériaux. Le suivi du chantier
-            sera assuré dans le souci du détail, le respect du planning et du
-            budget.
-          </p>
-          <p>
-            En cas de besoin, une équipe pluridisciplinaire peut-être constituée
-            : architecte DPLG, décorateur(trice)
-          </p>
-        </article>
-      </section>
-      <section id="portfolio">
-        <h2>Mes Projets</h2>
-        <a href="modale.html#modale" class="js-modale">Modifier</a>
-        <div class="filtre">
-          <button class="btn tous">Tous</button>
-          <button class="btn objets">Objets</button>
-          <button class="btn appartements">Appartements</button>
-          <button class="btn hotelsRestaurants">Hôtels & restaurants</button>
-        </div>
-        <div class="gallery">
+    <asside
+      id="modale"
+      class="modale"
+      role="dialog"
+      aria-modal="false"
+      aria-labelledby="titleModale"
+    >
+      <div class="modale-wrapper js-modal-stop">
+        <button class="js-modal-close">Fermer</button>
+        <h4 id="titleModale">Galerie photo</h4>
+        <div class="modaleGallery">
           <figure>
             <img src="assets/images/abajour-tahina.png" alt="Abajour Tahina" />
             <figcaption>Abajour Tahina</figcaption>
@@ -135,30 +101,16 @@
             <figcaption>Hotel First Arte - New Delhi</figcaption>
           </figure>
         </div>
-      </section>
-      <section id="contact">
-        <h3>Contact</h3>
-        <p>Vous avez un projet ? Discutons-en !</p>
-        <form action="#" method="post">
-          <label for="name">Nom</label>
-          <input type="text" name="name" id="name" />
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email" />
-          <label for="message">Message</label>
-          <textarea name="message" id="message" cols="30" rows="10"></textarea>
-          <input type="submit" value="Envoyer" />
+        <form method="post" enctype="multipart/form-data">
+          <button class="ajouterUnePhoto" type="button">
+            Ajouter une photo
+          </button>
+          <button class="supprimerGalerie" type="button">
+            Supprimer Galerie
+          </button>
         </form>
-      </section>
-    </main>
-
-    <footer>
-      <nav>
-        <ul>
-          <li>Mentions Légales</li>
-        </ul>
-      </nav>
-    </footer>
-    <script src="fonctions/filtres.js"></script>
+      </div>
+    </asside>
     <script src="fonctions/modale.js"></script>
   </body>
 </html>
