Implantation de la fonction d'ajout de photo dans modale.js

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <title>Sophie Bluel - Architecte d'intérieur</title>
@@ -25,7 +25,7 @@
       <div class="modale-wrapper js-modal-stop">
         <button class="js-modal-close">Fermer</button>
         <h4 id="titleModale">Galerie photo</h4>
-        <div class="modaleGallery">
+        <div class="modaleGallery js-modale">
           <figure>
             <img src="assets/images/abajour-tahina.png" alt="Abajour Tahina" />
             <figcaption>Abajour Tahina</figcaption>
@@ -102,8 +102,8 @@
           </figure>
         </div>
         <form method="post" enctype="multipart/form-data">
-          <button class="ajouterUnePhoto" type="button">
-            Ajouter une photo
+          <button class="ajouterPhotos" type="button">
+            Ajouter des photos
           </button>
           <button class="supprimerGalerie" type="button">
             Supprimer Galerie
