Début fonction isAdmin

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -52,7 +52,7 @@
       </section>
       <section id="portfolio">
         <h2>Mes Projets</h2>
-        <a href="modale.html#modale" class="js-modale">Modifier</a>
+        <a href="modale.html#modale" class="js-modale btnAdmin">Modifier</a>
         <div class="filtre">
           <button class="btn tous">Tous</button>
           <button class="btn objets">Objets</button>
@@ -160,5 +160,6 @@
     </footer>
     <script src="fonctions/filtres.js"></script>
     <script src="fonctions/modale.js"></script>
+    <script src="fonctions/login.js"></script>
   </body>
 </html>
