--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -30,7 +30,7 @@
     <main>
       <section id="introduction">
         <figure>
-          <img src="./assets/images/sophie-bluel.png" alt="" />
+          <img src="./assets/images/sophie-bluel.png" alt="Sophie BLUEL" />
         </figure>
         <article>
           <h2>Designer d'espace</h2>
@@ -52,10 +52,13 @@
         </article>
       </section>
       <section id="portfolio">
-        <h2>Mes Projets</h2>
-        <a href="modale.html#modale" id="btnAdmin" class="js-modale btnAdmin"
-          >Modifier</a
-        >
+        <div class="menuAdmin">
+          <h3>Mes Projets</h3>
+          <i class="fa-light fa-pen-to-square btnAdmin"></i>
+          <a href="modale.html#modale" id="btnAdmin" class="js-modale btnAdmin"
+            >Modifier</a
+          >
+        </div>
         <div class="filtre">
           <button class="btn tous">Tous</button>
           <button class="btn objets">Objets</button>
@@ -140,7 +143,7 @@
         </div>
       </section>
       <section id="contact">
-        <h3>Contact</h3>
+        <h4>Contact</h4>
         <p>Vous avez un projet ? Discutons-en !</p>
         <form action="#" method="post">
           <label for="name">Nom</label>
