Mise en forme de la galerie photo modale et ajout d'icône font awesome

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -54,9 +54,9 @@
       <section id="portfolio">
         <div class="menuAdmin">
           <h3>Mes Projets</h3>
-          <i class="fa-light fa-pen-to-square btnAdmin"></i>
+
           <a href="modale.html#modale" id="btnAdmin" class="js-modale btnAdmin"
-            >Modifier</a
+            ><i class="fa-solid fa-pen-to-square"></i> Modifier</a
           >
         </div>
         <div class="filtre">
@@ -167,5 +167,9 @@
     <script src="fonctions/filtres.js"></script>
     <script src="fonctions/modale.js"></script>
     <script src="fonctions/index.js"></script>
+    <script
+      src="https://kit.fontawesome.com/34c4b19384.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
