Mise en forme des bouttons de la modale

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
@@ -108,7 +108,7 @@
             </figure>
           </div>
         </div>
-        <form method="post" enctype="multipart/form-data">
+        <form method="post" enctype="multipart/form-data" class="menuModale1">
           <button class="ajouterPhotos" type="button">
             Ajouter des photos
           </button>
