Début d'ajout de gestion du contenu de la modale via requete API

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
@@ -30,6 +30,9 @@
           <h4 id="titleModale" class="titleModale">Galerie photo</h4>
           <div class="modaleGallery">
             <figure>
+              <button class="imgDelete">
+                <i class="fa-solid fa-xmark"></i>
+              </button>
               <img
                 src="assets/images/abajour-tahina.png"
                 alt="Abajour Tahina"
@@ -37,6 +40,9 @@
               <figcaption>Abajour Tahina</figcaption>
             </figure>
             <figure>
+              <button class="imgDelete">
+                <i class="fa-solid fa-xmark"></i>
+              </button>
               <img
                 src="assets/images/appartement-paris-v.png"
                 alt="Appartement Paris V"
@@ -44,6 +50,9 @@
               <figcaption>Appartement Paris V</figcaption>
             </figure>
             <figure>
+              <button class="imgDelete">
+                <i class="fa-solid fa-xmark"></i>
+              </button>
               <img
                 src="assets/images/restaurant-sushisen-londres.png"
                 alt="Restaurant Sushisen - Londres"
@@ -51,6 +60,9 @@
               <figcaption>Restaurant Sushisen - Londres</figcaption>
             </figure>
             <figure>
+              <button class="imgDelete">
+                <i class="fa-solid fa-xmark"></i>
+              </button>
               <img
                 src="assets/images/la-balisiere.png"
                 alt="Villa “La Balisiere” - Port Louis"
@@ -58,6 +70,9 @@
               <figcaption>Villa “La Balisiere” - Port Louis</figcaption>
             </figure>
             <figure>
+              <button class="imgDelete">
+                <i class="fa-solid fa-xmark"></i>
+              </button>
               <img
                 src="assets/images/structures-thermopolis.png"
                 alt="Structures Thermopolis"
@@ -65,6 +80,9 @@
               <figcaption>Structures Thermopolis</figcaption>
             </figure>
             <figure>
+              <button class="imgDelete">
+                <i class="fa-solid fa-xmark"></i>
+              </button>
               <img
                 src="assets/images/appartement-paris-x.png"
                 alt="Appartement Paris X"
@@ -72,6 +90,9 @@
               <figcaption>Appartement Paris X</figcaption>
             </figure>
             <figure>
+              <button class="imgDelete">
+                <i class="fa-solid fa-xmark"></i>
+              </button>
               <img
                 src="assets/images/le-coteau-cassis.png"
                 alt="Pavillon “Le coteau” - Cassis"
@@ -79,6 +100,9 @@
               <figcaption>Pavillon “Le coteau” - Cassis</figcaption>
             </figure>
             <figure>
+              <button class="imgDelete">
+                <i class="fa-solid fa-xmark"></i>
+              </button>
               <img
                 src="assets/images/villa-ferneze.png"
                 alt="Villa Ferneze - Isola d’Elba"
@@ -86,6 +110,9 @@
               <figcaption>Villa Ferneze - Isola d’Elba</figcaption>
             </figure>
             <figure>
+              <button class="imgDelete">
+                <i class="fa-solid fa-xmark"></i>
+              </button>
               <img
                 src="assets/images/appartement-paris-xviii.png"
                 alt="Appartement Paris XVIII"
@@ -93,6 +120,9 @@
               <figcaption>Appartement Paris XVIII</figcaption>
             </figure>
             <figure>
+              <button class="imgDelete">
+                <i class="fa-solid fa-xmark"></i>
+              </button>
               <img
                 src="assets/images/bar-lullaby-paris.png"
                 alt="Bar “Lullaby” - Paris"
@@ -100,6 +130,9 @@
               <figcaption>Bar “Lullaby” - Paris</figcaption>
             </figure>
             <figure>
+              <button class="imgDelete">
+                <i class="fa-solid fa-xmark"></i>
+              </button>
               <img
                 src="assets/images/hotel-first-arte-new-delhi.png"
                 alt="Hotel First Arte - New Delhi"
