--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -164,8 +164,8 @@
         </ul>
       </nav>
     </footer>
-    <script src="fonctions/filtres.js"></script>
-    <script src="fonctions/modale.js"></script>
+    <script type="module" src="fonctions/filtres.js"></script>
+    <script type="module" src="fonctions/modale.js"></script>
     <script src="fonctions/index.js"></script>
     <script
       src="https://kit.fontawesome.com/34c4b19384.js"
