--- a/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
@@ -28,119 +28,9 @@
         </button>
         <div class="js-modale">
           <h4 id="titleModale" class="titleModale">Galerie photo</h4>
-          <div class="modaleGallery">
-            <figure>
-              <button class="imgDelete">
-                <i class="fa-solid fa-xmark"></i>
-              </button>
-              <img
-                src="assets/images/abajour-tahina.png"
-                alt="Abajour Tahina"
-              />
-              <figcaption>Abajour Tahina</figcaption>
-            </figure>
-            <figure>
-              <button class="imgDelete">
-                <i class="fa-solid fa-xmark"></i>
-              </button>
-              <img
-                src="assets/images/appartement-paris-v.png"
-                alt="Appartement Paris V"
-              />
-              <figcaption>Appartement Paris V</figcaption>
-            </figure>
-            <figure>
-              <button class="imgDelete">
-                <i class="fa-solid fa-xmark"></i>
-              </button>
-              <img
-                src="assets/images/restaurant-sushisen-londres.png"
-                alt="Restaurant Sushisen - Londres"
-              />
-              <figcaption>Restaurant Sushisen - Londres</figcaption>
-            </figure>
-            <figure>
-              <button class="imgDelete">
-                <i class="fa-solid fa-xmark"></i>
-              </button>
-              <img
-                src="assets/images/la-balisiere.png"
-                alt="Villa “La Balisiere” - Port Louis"
-              />
-              <figcaption>Villa “La Balisiere” - Port Louis</figcaption>
-            </figure>
-            <figure>
-              <button class="imgDelete">
-                <i class="fa-solid fa-xmark"></i>
-              </button>
-              <img
-                src="assets/images/structures-thermopolis.png"
-                alt="Structures Thermopolis"
-              />
-              <figcaption>Structures Thermopolis</figcaption>
-            </figure>
-            <figure>
-              <button class="imgDelete">
-                <i class="fa-solid fa-xmark"></i>
-              </button>
-              <img
-                src="assets/images/appartement-paris-x.png"
-                alt="Appartement Paris X"
-              />
-              <figcaption>Appartement Paris X</figcaption>
-            </figure>
-            <figure>
-              <button class="imgDelete">
-                <i class="fa-solid fa-xmark"></i>
-              </button>
-              <img
-                src="assets/images/le-coteau-cassis.png"
-                alt="Pavillon “Le coteau” - Cassis"
-              />
-              <figcaption>Pavillon “Le coteau” - Cassis</figcaption>
-            </figure>
-            <figure>
-              <button class="imgDelete">
-                <i class="fa-solid fa-xmark"></i>
-              </button>
-              <img
-                src="assets/images/villa-ferneze.png"
-                alt="Villa Ferneze - Isola d’Elba"
-              />
-              <figcaption>Villa Ferneze - Isola d’Elba</figcaption>
-            </figure>
-            <figure>
-              <button class="imgDelete">
-                <i class="fa-solid fa-xmark"></i>
-              </button>
-              <img
-                src="assets/images/appartement-paris-xviii.png"
-                alt="Appartement Paris XVIII"
-              />
-              <figcaption>Appartement Paris XVIII</figcaption>
-            </figure>
-            <figure>
-              <button class="imgDelete">
-                <i class="fa-solid fa-xmark"></i>
-              </button>
-              <img
-                src="assets/images/bar-lullaby-paris.png"
-                alt="Bar “Lullaby” - Paris"
-              />
-              <figcaption>Bar “Lullaby” - Paris</figcaption>
-            </figure>
-            <figure>
-              <button class="imgDelete">
-                <i class="fa-solid fa-xmark"></i>
-              </button>
-              <img
-                src="assets/images/hotel-first-arte-new-delhi.png"
-                alt="Hotel First Arte - New Delhi"
-              />
-              <figcaption>Hotel First Arte - New Delhi</figcaption>
-            </figure>
-          </div>
+          <div class="modaleGallery"></div>
         </div>
+        <div class="js-modale2"></div>
         <form method="post" enctype="multipart/form-data" class="menuModale1">
           <button class="ajouterPhotos" type="button">
             Ajouter des photos
