Ajout bouton modifier dans l'intro, mise en place du CSS pour .modaleForm et ses sous classes

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -29,8 +29,11 @@
     </header>
     <main>
       <section id="introduction">
-        <figure>
+        <figure class="imgIntro">
           <img src="./assets/images/sophie-bluel.png" alt="Sophie BLUEL" />
+          <a href="#" id="btnAdmin" class="js-modale btnAdmin"
+            ><i class="fa-solid fa-pen-to-square"></i> Modifier</a
+          >
         </figure>
         <article>
           <h2>Designer d'espace</h2>
@@ -59,7 +62,7 @@
             ><i class="fa-solid fa-pen-to-square"></i> Modifier</a
           >
         </div>
-        <div class="filtre">
+        <div id="filtre" class="filtre">
           <button class="btn tous">Tous</button>
           <button class="btn objets">Objets</button>
           <button class="btn appartements">Appartements</button>
