Révision de la gestion du bouton de retour dans la moadale et de son placement

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
@@ -23,9 +23,14 @@
       aria-labelledby="titleModale"
     >
       <div class="modale-wrapper js-modal-stop">
-        <button class="js-modal-close closed">
-          <i class="fa-solid fa-xmark"></i>
-        </button>
+        <div class="modalNav">
+          <button class="js-modal-close closed">
+            <i class="fa-solid fa-xmark"></i>
+          </button>
+          <button class="modal-retour">
+            <i class="fa-sharp fa-solid fa-arrow-left"></i>
+          </button>
+        </div>
         <div class="js-modale">
           <h4 id="titleModale" class="titleModale">Galerie photo</h4>
           <div class="modaleGallery"></div>
