Résolution probléme de generation de doublon dans index à l'ouverture de la modale

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -31,7 +31,7 @@
       <section id="introduction">
         <figure class="imgIntro">
           <img src="./assets/images/sophie-bluel.png" alt="Sophie BLUEL" />
-          <a href="#" id="btnAdmin" class="js-modale btnAdmin"
+          <a href="modale.html#modale" id="btnAdmin" class="js-modale btnAdmin"
             ><i class="fa-solid fa-pen-to-square"></i> Modifier</a
           >
         </figure>
