Nouvelle gestion des cookie via setCookie.js, à affiner, découpe de filtres.js pour séparer genererCardImages.js

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -168,6 +168,7 @@
       </nav>
     </footer>
     <script type="module" src="fonctions/filtres.js"></script>
+    <script type="module" src="fonctions/genererCardImages.js"></script>
     <script type="module" src="fonctions/modale.js"></script>
     <script src="fonctions/index.js"></script>
     <script
