Découpe de modale.js pour avoir 3 fonctions séparés de ce code

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
@@ -46,6 +46,6 @@
         </form>
       </div>
     </asside>
-    <script src="fonctions/modale.js"></script>
+    <script type="module" src="fonctions/modale.js"></script>
   </body>
 </html>
