--- a/Portfolio-architecte-sophie-bluel/FrontEnd/login.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/login.html
@@ -48,6 +48,7 @@
         </div>
       </div>
     </main>
+    <script src="../serviceWorker.js"></script>
     <script type="module" src="fonctions/login.js"></script>
   </body>
 </html>
