--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -170,7 +170,8 @@
     <script type="module" src="fonctions/filtres.js"></script>
     <script type="module" src="fonctions/genererCardImages.js"></script>
     <script type="module" src="fonctions/modale.js"></script>
-    <script src="fonctions/index.js"></script>
+    <script type="module" src="fonctions/adminAccess.js"></script>
+    <script src="fonctions/logout.js"></script>
     <script
       src="https://kit.fontawesome.com/34c4b19384.js"
       crossorigin="anonymous"
