--- a/Portfolio-architecte-sophie-bluel/FrontEnd/login.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/login.html
@@ -19,7 +19,7 @@
       <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
       <nav>
         <ul>
-          <li><a href="#index.html/portfolio">projets</a></li>
+          <li><a href="index.html/#portfolio">projets</a></li>
           <li><a href="index.html/#contact">contact</a></li>
           <li><a href="index.html">Accueil</a></li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
