Ajout du parametre required aux input pour ajouter une photo

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
@@ -36,7 +36,7 @@
           <div class="modaleGallery"></div>
         </div>
         <div class="js-modale2"></div>
-        <form method="post" enctype="multipart/form-data" class="menuModale1">
+        <form method="post" class="menuModale1">
           <button class="ajouterPhotos" type="button">
             Ajouter des photos
           </button>
