Séparation de formPictureSubmit, et correction de handleRetourClick

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -171,6 +171,7 @@
     <script type="module" src="fonctions/genererCardImages.js"></script>
     <script type="module" src="fonctions/modale.js"></script>
     <script type="module" src="fonctions/adminAccess.js"></script>
+    <script type="module" src="fonctions/formPictureSubmitHTML.js"></script>
     <script src="../serviceWorker.js"></script>
     <script src="fonctions/logout.js"></script>
     <script
