Mise en forme de la modale pour ajouter des photos

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/modale.html
@@ -41,7 +41,7 @@
             Ajouter des photos
           </button>
           <button class="supprimerGalerie" type="button">
-            Supprimer Galerie
+            Supprimer la galerie
           </button>
         </form>
       </div>
