Regroupement des fichiers html

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -21,7 +21,7 @@
         <ul>
           <li><a href="#portfolio">projets</a></li>
           <li><a href="#contact">contact</a></li>
-          <li id="login"><a href="login.html">login</a></li>
+          <li id="login"><a href="html/login.html">login</a></li>
           <li><a id="logout" href="#">logout</a></li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
@@ -31,7 +31,10 @@
       <section id="introduction">
         <figure class="imgIntro">
           <img src="./assets/images/sophie-bluel.png" alt="Sophie BLUEL" />
-          <a href="modale.html#modale" id="btnAdmin" class="js-modale btnAdmin"
+          <a
+            href="html/modale.html#modale"
+            id="btnAdmin"
+            class="js-modale btnAdmin"
             ><i class="fa-solid fa-pen-to-square"></i> Modifier</a
           >
         </figure>
@@ -58,7 +61,10 @@
         <div class="menuAdmin">
           <h3>Mes Projets</h3>
 
-          <a href="modale.html#modale" id="btnAdmin" class="js-modale btnAdmin"
+          <a
+            href="html/modale.html#modale"
+            id="btnAdmin"
+            class="js-modale btnAdmin"
             ><i class="fa-solid fa-pen-to-square"></i> Modifier</a
           >
         </div>
