--- a/Portfolio-architecte-sophie-bluel/FrontEnd/html/login.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/html/login.html
@@ -11,18 +11,18 @@
       rel="stylesheet"
     />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="./assets/style.css" />
-    <link rel="stylesheet" href="./assets/login.css" />
+    <link rel="stylesheet" href="../assets/style.css" />
+    <link rel="stylesheet" href="../assets/login.css" />
   </head>
   <body>
     <header>
       <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
       <nav>
         <ul>
-          <li><a href="index.html#portfolio">projets</a></li>
-          <li><a href="index.html#contact">contact</a></li>
-          <li><a href="index.html">Accueil</a></li>
-          <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
+          <li><a href="../index.html#portfolio">projets</a></li>
+          <li><a href="../index.html#contact">contact</a></li>
+          <li><a href="../index.html">Accueil</a></li>
+          <li><img src="../assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
     </header>
@@ -50,6 +50,6 @@
         </div>
       </div>
     </main>
-    <script type="module" src="fonctions/login.js"></script>
+    <script type="module" src="../fonctions/login.js"></script>
   </body>
 </html>
