--- a/Portfolio-architecte-sophie-bluel/FrontEnd/html/modale.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/html/modale.html
@@ -11,8 +11,8 @@
       rel="stylesheet"
     />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="./assets/style.css" />
-    <link rel="stylesheet" href="./assets/modale.css" />
+    <link rel="stylesheet" href="../assets/style.css" />
+    <link rel="stylesheet" href="../assets/modale.css" />
   </head>
   <body>
     <asside
@@ -46,6 +46,6 @@
         </form>
       </div>
     </asside>
-    <script type="module" src="fonctions/modale.js"></script>
+    <script type="module" src="../fonctions/modale.js"></script>
   </body>
 </html>
